--- a/test.ipynb
+++ b/test.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 109,
    "id": "32c5c4f9",
    "metadata": {},
    "outputs": [],
@@ -43,6 +43,7 @@
     "\n",
     "Your job is to turn a user's natural language question into a focused Google search query\n",
     "that finds relevant legal documents in PDF format on official U.S. government websites.\n",
+    "and as output give me just the query without explanations\n",
     "\n",
     "Instructions:\n",
     "- Use only the key legal terms (state, topic, law name if known).\n",
@@ -63,7 +64,7 @@
     "\"\"\"\n",
     "\n",
     "    response = client.chat.completions.create(\n",
-    "        model=\"deepseek-chat\",\n",
+    "        model=\"deepseek-reasoner\",\n",
     "        messages=[{\"role\": \"user\", \"content\": prompt}],\n",
     "        temperature=0.2\n",
     "    )\n",
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 110,
    "id": "aada385d",
    "metadata": {},
    "outputs": [],
@@ -84,17 +85,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 111,
    "id": "f83457e7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Query: cuba travel restrictions reentry US site:.gov filetype:pdf'"
+       "'US entry after Cuba travel regulations site:.gov filetype:pdf'"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 112,
    "id": "f74717d6",
    "metadata": {},
    "outputs": [],
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 113,
    "id": "7438325b",
    "metadata": {},
    "outputs": [],
@@ -151,20 +152,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['https://www.cbp.gov/sites/default/files/2025-06/ttp_handbook.pdf',\n",
-       " 'https://travel.state.gov/content/dam/Congressional/newsletters/May-14-2020-Coronavirus-Guidance-Newsletter.pdf',\n",
-       " 'https://www.uscis.gov/sites/default/files/document/foia/DACA_-_Senator_Harris.pdf',\n",
-       " 'https://www.govinfo.gov/content/pkg/FR-2025-03-19/pdf/2025-04731.pdf',\n",
-       " 'https://travel.state.gov/content/dam/Congressional/newsletters/June-3-2020-Coronavirus-Guidance-Newsletter.pdf']"
+       "['https://www.cbp.gov/sites/default/files/2025-06/CLP%20Bulletin%20%20Presidential%20Proclamation%20Restricting%20Entry%20Final.pdf',\n",
+       " 'https://travel.state.gov/content/dam/visas/iv-dv-supplemental/HAV%20-%20Havana-5-20-2024.pdf',\n",
+       " 'https://www.congress.gov/crs_external_products/IF/PDF/IF10045/IF10045.67.pdf']"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 115,
    "id": "302e1090",
    "metadata": {},
    "outputs": [],
@@ -203,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 116,
    "id": "0e1fc580",
    "metadata": {},
    "outputs": [],
@@ -213,17 +212,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 117,
    "id": "b95ed978",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'data/temp\\\\document_20250719_233251_787494.pdf'"
+       "'data/temp\\\\document_20250719_235609_502844.pdf'"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 118,
    "id": "4c722f77",
    "metadata": {},
    "outputs": [],
@@ -277,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 119,
    "id": "862a3955",
    "metadata": {},
    "outputs": [],
@@ -289,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 120,
    "id": "a87499a9",
    "metadata": {},
    "outputs": [
@@ -299,160 +298,8 @@
      "text": [
       "Saved page_1.png\n",
       "Saved page_2.png\n",
-      "Saved page_3.png\n",
-      "Saved page_4.png\n",
-      "Saved page_5.png\n",
-      "Saved page_6.png\n",
-      "Saved page_7.png\n",
-      "Saved page_8.png\n",
-      "Saved page_9.png\n",
-      "Saved page_10.png\n",
-      "Saved page_11.png\n",
-      "Saved page_12.png\n",
-      "Saved page_13.png\n",
-      "Saved page_14.png\n",
-      "Saved page_15.png\n",
-      "Saved page_16.png\n",
-      "Saved page_17.png\n",
-      "Saved page_18.png\n",
-      "Saved page_19.png\n",
-      "Saved page_20.png\n",
-      "Saved page_21.png\n",
-      "Saved page_22.png\n",
-      "Saved page_23.png\n",
-      "Saved page_24.png\n",
-      "Saved page_25.png\n",
-      "Saved page_26.png\n",
-      "Saved page_27.png\n",
-      "Saved page_28.png\n",
-      "Saved page_29.png\n",
-      "Saved page_30.png\n",
-      "Saved page_31.png\n",
-      "Saved page_32.png\n",
-      "Saved page_33.png\n",
-      "Saved page_34.png\n",
-      "Saved page_35.png\n",
-      "Saved page_36.png\n",
-      "Saved page_37.png\n",
-      "Saved page_38.png\n",
-      "Saved page_39.png\n",
-      "Saved page_40.png\n",
-      "Saved page_41.png\n",
-      "Saved page_42.png\n",
-      "Saved page_43.png\n",
-      "Saved page_44.png\n",
-      "Saved page_45.png\n",
-      "Saved page_46.png\n",
-      "Saved page_47.png\n",
-      "Saved page_48.png\n",
-      "Saved page_49.png\n",
-      "Saved page_50.png\n",
-      "Saved page_51.png\n",
-      "Saved page_52.png\n",
-      "Saved page_53.png\n",
-      "Saved page_54.png\n",
-      "Saved page_55.png\n",
-      "Saved page_56.png\n",
-      "Saved page_57.png\n",
-      "Saved page_58.png\n",
-      "Saved page_59.png\n",
-      "Saved page_60.png\n",
-      "Saved page_61.png\n",
-      "Saved page_62.png\n",
-      "Saved page_63.png\n",
-      "Saved page_64.png\n",
-      "Saved page_65.png\n",
-      "Saved page_66.png\n",
-      "Saved page_67.png\n",
-      "Saved page_68.png\n",
-      "Saved page_69.png\n",
-      "Saved page_70.png\n",
-      "Saved page_71.png\n",
-      "Saved page_72.png\n",
-      "Saved page_73.png\n",
-      "Saved page_74.png\n",
-      "Saved page_75.png\n",
-      "Saved page_76.png\n",
-      "Saved page_77.png\n",
-      "Saved page_78.png\n",
       "Removed page_1.png\n",
-      "Removed page_2.png\n",
-      "Removed page_3.png\n",
-      "Removed page_4.png\n",
-      "Removed page_5.png\n",
-      "Removed page_6.png\n",
-      "Removed page_7.png\n",
-      "Removed page_8.png\n",
-      "Removed page_9.png\n",
-      "Removed page_10.png\n",
-      "Removed page_11.png\n",
-      "Removed page_12.png\n",
-      "Removed page_13.png\n",
-      "Removed page_14.png\n",
-      "Removed page_15.png\n",
-      "Removed page_16.png\n",
-      "Removed page_17.png\n",
-      "Removed page_18.png\n",
-      "Removed page_19.png\n",
-      "Removed page_20.png\n",
-      "Removed page_21.png\n",
-      "Removed page_22.png\n",
-      "Removed page_23.png\n",
-      "Removed page_24.png\n",
-      "Removed page_25.png\n",
-      "Removed page_26.png\n",
-      "Removed page_27.png\n",
-      "Removed page_28.png\n",
-      "Removed page_29.png\n",
-      "Removed page_30.png\n",
-      "Removed page_31.png\n",
-      "Removed page_32.png\n",
-      "Removed page_33.png\n",
-      "Removed page_34.png\n",
-      "Removed page_35.png\n",
-      "Removed page_36.png\n",
-      "Removed page_37.png\n",
-      "Removed page_38.png\n",
-      "Removed page_39.png\n",
-      "Removed page_40.png\n",
-      "Removed page_41.png\n",
-      "Removed page_42.png\n",
-      "Removed page_43.png\n",
-      "Removed page_44.png\n",
-      "Removed page_45.png\n",
-      "Removed page_46.png\n",
-      "Removed page_47.png\n",
-      "Removed page_48.png\n",
-      "Removed page_49.png\n",
-      "Removed page_50.png\n",
-      "Removed page_51.png\n",
-      "Removed page_52.png\n",
-      "Removed page_53.png\n",
-      "Removed page_54.png\n",
-      "Removed page_55.png\n",
-      "Removed page_56.png\n",
-      "Removed page_57.png\n",
-      "Removed page_58.png\n",
-      "Removed page_59.png\n",
-      "Removed page_60.png\n",
-      "Removed page_61.png\n",
-      "Removed page_62.png\n",
-      "Removed page_63.png\n",
-      "Removed page_64.png\n",
-      "Removed page_65.png\n",
-      "Removed page_66.png\n",
-      "Removed page_67.png\n",
-      "Removed page_68.png\n",
-      "Removed page_69.png\n",
-      "Removed page_70.png\n",
-      "Removed page_71.png\n",
-      "Removed page_72.png\n",
-      "Removed page_73.png\n",
-      "Removed page_74.png\n",
-      "Removed page_75.png\n",
-      "Removed page_76.png\n",
-      "Removed page_77.png\n",
-      "Removed page_78.png\n"
+      "Removed page_2.png\n"
      ]
     }
    ],
@@ -560,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 121,
    "id": "29fd2417",
    "metadata": {},
    "outputs": [],
@@ -597,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 122,
    "id": "87b0a2cc",
    "metadata": {},
    "outputs": [],
@@ -607,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 123,
    "id": "9f8409e1",
    "metadata": {},
    "outputs": [
@@ -615,18 +462,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yes, a person who travels to Cuba can enter the U.S., but there are specific requirements and restrictions. \n",
+      "Based on the extracted text from the Presidential Proclamation dated June 4, 2025, **a person who travels to Cuba (a national of Cuba) will generally not be permitted to enter the United States** unless they fall under one of the exceptions listed.  \n",
       "\n",
-      "According to the document (Section 16.4, \"Cuba Travel\"), there are eleven categories of legal travel to Cuba under the Cuba General License, including family visits, official business, journalism, professional research, religious activities, and others. Travelers must self-declare their reason for travel and may be asked to provide a detailed itinerary upon re-entry to the U.S. to validate that their travel met one of the approved categories. \n",
+      "### Key Points:  \n",
+      "1. **General Restriction**: Cuba is one of the 19 countries whose nationals are subject to entry suspension under the Proclamation, effective **June 9, 2025**.  \n",
+      "2. **Exceptions**: A Cuban national may still enter the U.S. if they:  \n",
+      "   - Hold a **valid U.S. visa issued on or before June 8, 2025**.  \n",
+      "   - Are a **lawful permanent resident (LPR)** of the U.S.  \n",
+      "   - Are a **dual national traveling on a passport from a non-listed country**.  \n",
+      "   - Qualify for one of the other exceptions (e.g., certain visa classifications, family-based immigrant visas, etc.).  \n",
       "\n",
-      "However, if a traveler enters and exits Cuba from a third country to circumvent U.S. restrictions (e.g., for tourism outside the approved categories), this would violate TTP policies, and their Trusted Traveler Program (TTP) membership may be revoked or denied. \n",
+      "### Action Required:  \n",
+      "If the traveler does not meet an exception, they **will not be allowed entry** unless the Proclamation is amended or revoked. For specific cases, CBP or the U.S. Department of State should be consulted.  \n",
       "\n",
-      "In summary:\n",
-      "- Travel to Cuba is permitted under specific categories.\n",
-      "- Travelers must declare their purpose and may need to provide documentation upon re-entry.\n",
-      "- Unapproved travel (e.g., tourism via a third country) can result in penalties or loss of TTP privileges. \n",
-      "\n",
-      "For non-TTP members, general admissibility rules apply, but the Cuba-specific restrictions must be followed.\n"
+      "Let me know if you need further clarification!\n"
      ]
     }
    ],
@@ -879,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 124,
    "id": "0da94bf9",
    "metadata": {},
    "outputs": [],
@@ -891,29 +740,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 125,
    "id": "c9ce0177",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.00867522,  0.01954832, -0.01806171, ...,  0.03503909,\n",
-       "        -0.01723213,  0.00068608],\n",
-       "       [-0.04833889,  0.06224408, -0.03804775, ...,  0.01147478,\n",
-       "        -0.01310454,  0.00469655],\n",
-       "       [-0.01930671,  0.03456954, -0.02821949, ...,  0.03562579,\n",
-       "         0.00596994,  0.0251301 ],\n",
+       "array([[-0.02451354,  0.08217824, -0.0069642 , ..., -0.03024538,\n",
+       "        -0.02166775, -0.02374367],\n",
+       "       [ 0.00524226,  0.07700112, -0.01096253, ...,  0.0440694 ,\n",
+       "        -0.03081658,  0.0042694 ],\n",
+       "       [ 0.03243458,  0.01106589, -0.0193145 , ...,  0.01641932,\n",
+       "        -0.02276189,  0.0576993 ],\n",
        "       ...,\n",
-       "       [-0.02072472,  0.04778995, -0.01929529, ...,  0.01427777,\n",
-       "        -0.02195573,  0.03232634],\n",
-       "       [-0.00325316, -0.03922211, -0.02298199, ...,  0.00834117,\n",
-       "         0.00403607, -0.00109873],\n",
-       "       [-0.0391397 ,  0.03720684, -0.01617644, ..., -0.02738884,\n",
-       "        -0.04656278, -0.00552618]], dtype=float32)"
+       "       [ 0.05010303,  0.00984699, -0.00612123, ...,  0.03566615,\n",
+       "        -0.0437218 ,  0.03555981],\n",
+       "       [-0.00726368,  0.06085514,  0.00835826, ...,  0.00073932,\n",
+       "        -0.079758  ,  0.0094218 ],\n",
+       "       [ 0.02267454, -0.06435157, -0.00904555, ..., -0.00564285,\n",
+       "        -0.06875694, -0.05279756]], dtype=float32)"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -924,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +983,7 @@
        "      dtype=float32)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1145,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 128,
    "id": "bd83747b",
    "metadata": {},
    "outputs": [],
@@ -1160,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 129,
    "id": "6ae575b3",
    "metadata": {},
    "outputs": [],
@@ -1174,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 130,
    "id": "012a013e",
    "metadata": {},
    "outputs": [
@@ -1182,15 +1031,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Chunk 443 (score: 0.65) - Page inconnue:\n",
+      "Chunk 4 (score: 0.44) - Page 1:\n",
       "\n",
-      "16. 4, Cuba Travel There are eleven categories of legal travel under the Cuba General License: e Family visits e Official business for the U. S....\n",
-      "Chunk 444 (score: 0.65) - Page 51:\n",
+      "Exceptions  Additionally, the following are excepted from the Proclamation:  (i) any lawful permanent resident (LPR) of the United States;  (ii) any dual national of a country designated under sections 2 and 3 of the proclamation when the individual is traveling on a passport issued by a country not so designated;  (iii) any foreign national traveling with a valid nonimmigrant visa in the following classifications: A-1, A-2, C-2, C-3, G-1, G-2, G-3, G-4, NATO-1, NATO-2, NATO-3, NATO-4, NATO-5, o...\n",
+      "Chunk 2 (score: 0.41) - Page 1:\n",
       "\n",
-      "government, foreign government, and certain intergovernmental organizations e Journalism e Professional research « Religious activities e Public performances e Support for the Cuban people @ Humanitarian projects e Activities of private foundations or research or educational institutes e  xportation, importation or transmission of information or informational materials e Certain export transactions The only required documentation needed to satisfy the Cuba General License is a self-declared reas...\n",
-      "Chunk 446 (score: 0.57) - Page 52:\n",
+      "The Proclamation fully or partially suspends the entry of nationals of the following 19 countries: Afghanistan,  Myanmar (Burma), Chad, Republic of The Congo, Equatorial Guinea, Eritrea, Haiti, Iran, Libya, Somalia,  Sudan, Yemen, Burundi, Cuba, Laos, Sierra Leone, Togo, Turkmenistan, and Venezuela. The Proclamation will  be implemented by CBP and partner agencies, such as U. S....\n",
+      "Chunk 1 (score: 0.40) - Page inconnue:\n",
       "\n",
-      "CBP accepts the admission of the traveler upon re-entry as evidence the travel met the Cuban General License requirements. Therefore, GE enrollment centers should not require an affidavit (detailed itinerary) from a GE applicant during the enrollment process. If it is discovered that the traveler entered and exited Cuba from a third country, which circumvents the U....\n"
+      "dhs. gov Presidential Proclamation: Restricting the Entry of Foreign Nationals to Protect the United States from Foreign Terrorists and Other National Security and Public Safety Threats  On June 4, 2025, the President of the United States issued a Presidential Proclamation, Restricting the Entry of  Foreign Nationals to Protect the United States from Foreign Terrorists and Other National Security and Public  Safety Threats. This proclamation is effective at 12:01 am Eastern Daylight Time on June...\n"
      ]
     }
    ],
