--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 1,
    "id": "b521543e",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 5,
    "id": "daf629db",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 6,
    "id": "32c5c4f9",
    "metadata": {},
    "outputs": [],
@@ -73,28 +73,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 7,
    "id": "aada385d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "question = 'what is the procedure to do after getting the green card as a foreign?'\n",
+    "question = 'Can a person who travels to cub enter the US?'\n",
     "reforulation = reformuler_question_en_requete_usa(question=question, client=deepseek_client)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 8,
    "id": "f83457e7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'permanent resident responsibilities site:.gov filetype:pdf'"
+       "'\"US entry restrictions Cuba travel site:.gov filetype:pdf\"'"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 9,
    "id": "f74717d6",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 14,
    "id": "7438325b",
    "metadata": {},
    "outputs": [],
@@ -151,20 +151,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['https://www.uscis.gov/sites/default/files/document/guides/B4en.pdf',\n",
-       " 'https://www.uscis.gov/sites/default/files/document/guides/M-618.pdf',\n",
-       " 'https://ohss.dhs.gov/sites/default/files/2023-12/Lawful_Permanent_Residents_2007.pdf',\n",
-       " 'https://www.pa.gov/content/dam/copapwp-pagov/en/aging/documents/resources-for-aging-professionals/policy-and-procedure-manual/chapter-iv--options-program/appx%20f.1%20us%20citizen%20and%20lawful%20permanent%20resident%20requirements.pdf',\n",
-       " 'https://ohss.dhs.gov/sites/default/files/2023-12/Lawful_Permanent_Residents_2008.pdf']"
+       "[]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 12,
    "id": "302e1090",
    "metadata": {},
    "outputs": [],
@@ -203,17 +199,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 13,
    "id": "0e1fc580",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m save_pdf \u001b[38;5;241m=\u001b[39m telecharger_pdf_dossier_temp(url_pdf\u001b[38;5;241m=\u001b[39m\u001b[43mpdf_link\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m)\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "save_pdf = telecharger_pdf_dossier_temp(url_pdf=pdf_link[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": null,
    "id": "b95ed978",
    "metadata": {},
    "outputs": [
