feat: add and test the lambda function

--- a/notebooks/test_pipeline.ipynb
+++ b/notebooks/test_pipeline.ipynb
@@ -26,31 +26,34 @@
       "INFO:sentence_transformers.SentenceTransformer:Use pytorch device_name: cpu\n",
       "INFO:sentence_transformers.SentenceTransformer:Load pretrained SentenceTransformer: sentence-transformers/all-mpnet-base-v2\n",
       "INFO:httpx:HTTP Request: POST https://api.deepseek.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
-      "INFO:src.main:[ReformulateQuestion] Reformulated query: cuba travel entry us regulations site:.gov filetype:pdf\n",
-      "INFO:src.main:[SearchPDFs] Found URLs: ['https://www.cbp.gov/sites/default/files/2025-06/CLP%20Bulletin%20%20Presidential%20Proclamation%20Restricting%20Entry%20Final.pdf', 'https://www.congress.gov/crs_external_products/IF/PDF/IF10045/IF10045.66.pdf', 'https://travel.state.gov/content/dam/visas/iv-dv-supplemental/HAV%20-%20Havana-5-20-2024.pdf']\n",
-      "INFO:src.main:[DownloadPDF] PDF downloaded at: data/temp\\document_20250720_134431_468001.pdf\n"
+      "INFO:src.main:[ReformulateQuestion] Reformulated query: cuba travel restrictions U.S. entry regulations site:.gov filetype:pdf\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved page_1.png\n",
-      "Saved page_2.png\n",
-      "Removed page_1.png\n"
+      "Ignored https://www.congress.gov/crs_external_products/RL/PDF/RL31139/RL31139.94.pdf (too many pages or unreadable)\n",
+      "https://www.congress.gov/crs_external_products/IF/PDF/IF10045/IF10045.67.pdf (3 pages)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:src.main:[OCRExtractor] Extracted OCR text from 2 pages.\n"
+      "INFO:src.main:[SearchPDFs] Found URLs: ['https://www.congress.gov/crs_external_products/IF/PDF/IF10045/IF10045.67.pdf']\n",
+      "INFO:src.main:[DownloadPDF] PDF downloaded at: data/temp\\document_20250720_140958_947406.pdf\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Ignored https://travel.state.gov/content/dam/visas/iv-dv-supplemental/HAV%20-%20Havana-5-20-2024.pdf (too many pages or unreadable)\n",
+      "Saved page_1.png\n",
+      "Saved page_2.png\n",
+      "Saved page_3.png\n",
+      "Removed page_1.png\n",
       "Removed page_2.png\n"
      ]
     },
@@ -58,34 +61,39 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "INFO:src.main:[OCRExtractor] Extracted OCR text from 3 pages.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed page_3.png\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "INFO:httpx:HTTP Request: POST https://api.deepseek.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
-      "INFO:src.main:[AIAgentAnswer] AI answer: Based on the extracted text from the PDF document, the answer to the user's question is as follows:\n",
+      "INFO:src.main:[AIAgentAnswer] AI answer: Yes, a person who travels to Cuba can enter the United States, but there are restrictions and requirements in place. The Trump Administration rolled back some of the Obama-era policies that had eased travel to Cuba, including terminating cruise ship travel and U.S. flights to Cuban cities other than Havana. Additionally, the Treasury Department eliminated people-to-people educational travel and imposed caps on family remittances. \n",
       "\n",
-      "**A person who travels to Cuba may be restricted from entering the U.S. under the Presidential Proclamation effective June 9, 2025, unless they qualify for an exception.**  \n",
+      "However, certain categories of travel to Cuba are still permitted, such as family visits, official government business, journalistic activity, professional research, and religious activities, among others. Travelers must comply with these categories and may need to obtain the necessary licenses or authorizations. \n",
       "\n",
-      "### Key Points:  \n",
-      "1. **Restriction**: Cuba is one of the 19 countries whose nationals are subject to entry suspensions under the Proclamation.  \n",
-      "2. **Exceptions**: The person may still enter the U.S. if they:  \n",
-      "   - Have a valid U.S. visa issued **on or before June 8, 2025**.  \n",
-      "   - Are a lawful permanent resident (LPR) of the U.S.  \n",
-      "   - Are a dual national traveling on a passport from a non-restricted country.  \n",
-      "   - Fall under other exempt categories (e.g., certain visa holders like diplomats, athletes, or immediate family immigrants).  \n",
+      "It's important to check the most current U.S. government regulations before planning travel to Cuba, as policies can change. The document also mentions that visa restrictions have been imposed on certain Cuban officials and individuals associated with the Cuban government, but these do not generally apply to ordinary travelers. \n",
       "\n",
-      "### Action Required:  \n",
-      "The traveler should verify their visa status or eligibility for an exception before attempting entry. If uncertain, they should contact the relevant **Customs and Border Protection (CBP) Regional Carrier Liaison Group** for guidance.  \n",
-      "\n",
-      "*(Note: This analysis assumes the Proclamation is in effect as of the document’s date. Always check for updates to U.S. immigration policies.)*\n"
+      "For the most accurate and up-to-date information, consult the U.S. Department of the Treasury's Office of Foreign Assets Control (OFAC) and the U.S. Department of State.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "462c44cc31fe477b8f43f3269d345349",
+       "model_id": "d92a8e070ce046d9be5770f824df868f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Batches:   0%|          | 0/1 [00:00<?, ?it/s]"
+       "Batches:   0%|          | 0/7 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -94,12 +102,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "851e733946ef48e4bcce86c970a800cc",
+       "model_id": "9ecf34a0586c4731b04fceac2c0aafa2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Batches:   0%|          | 0/1 [00:00<?, ?it/s]"
+       "Batches:   0%|          | 0/3 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -108,7 +116,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f2f090bf8fe49a7ac07b54f688a792e",
+       "model_id": "abb8d1cbd6fc415785830200bc27093c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -123,38 +131,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:src.main:[RAGRetriever] Top chunk: The Proclamation fully or partially suspends the entry of nationals of the following 19 countries: Afghanistan,  Myanmar (Burma), Chad, Republic of The Congo, Equatorial Guinea, Eritrea, Haiti, Iran, Libya, Somalia,  Sudan, Yemen, Burundi, Cuba, Laos, Sierra Leone, Togo, Turkmenistan, and Venezuela. The Proclamation will  be implemented by CBP and partner agencies, such as U. S.\n",
-      "INFO:src.main:[RAGRetriever] Found on page: 1\n"
+      "INFO:src.main:[RAGRetriever] Top chunk: Sullivan, Specialist in Latin American Affairs prohibited from entering the United States pursuant to IF 10045 https://crsreports. congress. gov Cuba: U.\n",
+      "INFO:src.main:[RAGRetriever] Found on page: 2\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final Answer: Based on the extracted text from the PDF document, the answer to the user's question is as follows:\n",
+      "Final Answer: Yes, a person who travels to Cuba can enter the United States, but there are restrictions and requirements in place. The Trump Administration rolled back some of the Obama-era policies that had eased travel to Cuba, including terminating cruise ship travel and U.S. flights to Cuban cities other than Havana. Additionally, the Treasury Department eliminated people-to-people educational travel and imposed caps on family remittances. \n",
       "\n",
-      "**A person who travels to Cuba may be restricted from entering the U.S. under the Presidential Proclamation effective June 9, 2025, unless they qualify for an exception.**  \n",
+      "However, certain categories of travel to Cuba are still permitted, such as family visits, official government business, journalistic activity, professional research, and religious activities, among others. Travelers must comply with these categories and may need to obtain the necessary licenses or authorizations. \n",
       "\n",
-      "### Key Points:  \n",
-      "1. **Restriction**: Cuba is one of the 19 countries whose nationals are subject to entry suspensions under the Proclamation.  \n",
-      "2. **Exceptions**: The person may still enter the U.S. if they:  \n",
-      "   - Have a valid U.S. visa issued **on or before June 8, 2025**.  \n",
-      "   - Are a lawful permanent resident (LPR) of the U.S.  \n",
-      "   - Are a dual national traveling on a passport from a non-restricted country.  \n",
-      "   - Fall under other exempt categories (e.g., certain visa holders like diplomats, athletes, or immediate family immigrants).  \n",
+      "It's important to check the most current U.S. government regulations before planning travel to Cuba, as policies can change. The document also mentions that visa restrictions have been imposed on certain Cuban officials and individuals associated with the Cuban government, but these do not generally apply to ordinary travelers. \n",
       "\n",
-      "### Action Required:  \n",
-      "The traveler should verify their visa status or eligibility for an exception before attempting entry. If uncertain, they should contact the relevant **Customs and Border Protection (CBP) Regional Carrier Liaison Group** for guidance.  \n",
-      "\n",
-      "*(Note: This analysis assumes the Proclamation is in effect as of the document’s date. Always check for updates to U.S. immigration policies.)*\n",
-      "Relevant Chunk: The Proclamation fully or partially suspends the entry of nationals of the following 19 countries: Afghanistan,  Myanmar (Burma), Chad, Republic of The Congo, Equatorial Guinea, Eritrea, Haiti, Iran, Libya, Somalia,  Sudan, Yemen, Burundi, Cuba, Laos, Sierra Leone, Togo, Turkmenistan, and Venezuela. The Proclamation will  be implemented by CBP and partner agencies, such as U. S.\n",
-      "Found on Page: 1\n"
+      "For the most accurate and up-to-date information, consult the U.S. Department of the Treasury's Office of Foreign Assets Control (OFAC) and the U.S. Department of State.\n",
+      "Relevant Chunk: Sullivan, Specialist in Latin American Affairs prohibited from entering the United States pursuant to IF 10045 https://crsreports. congress. gov Cuba: U.\n",
+      "Found on Page: 2\n"
      ]
     }
    ],
    "source": [
     "from src.main import build_pipeline\n",
-    "question = \"Can a person who travels to cuba can enter the US?\"\n",
+    "question = \"Can a person who travels to cuba enter the US?\"\n",
     "\n",
     "pipeline = build_pipeline(question)\n",
     "result = pipeline.fit_transform(None)\n",
