--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b521543e",
    "metadata": {},
    "outputs": [],
@@ -17,14 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "daf629db",
    "metadata": {},
    "outputs": [],
    "source": [
     "from openai import OpenAI\n",
     "deepseek_client = OpenAI(\n",
-    "    api_key=\"sk-3da1e2817a2942ea8809277679bb05ec\",\n",
+    "    api_key=os.getenv('DEEPSEEK_API_KEY'),\n",
     "    base_url=\"https://api.deepseek.com/v1\"\n",
     ")"
    ]
